k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skyops-app
  namespace: skyops
  labels:
    app: skyops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skyops-app
  template:
    metadata:
      labels:
        app: skyops-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: app
          image: error404gg/skyops-monitoring-lab:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
