k8s/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: skyops-app
  namespace: skyops
  labels:
    app: skyops-app
spec:
  selector:
    app: skyops-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
