k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skyops-app
  namespace: skyops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: skyops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skyops-app
                port:
                  number: 80
